# ipa_tts_minimal

./: .gitignore  README.md  core_infer.py
diamoe_tts/: pyproject.toml  requirements.txt
diamoe_tts/src/f5_tts/configs/: gradio.yaml
diamoe_tts/src/f5_tts/infer/: utils_infer.py
diamoe_tts/src/f5_tts/model/: __init__.py  moe.py
